# Silva

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  THIRD_PARTY_LICENSES.txt
.github/: FUNDING.yml
LICENSES/: CHILLROUND-COPYRIGHT.txt  MIT.txt  OFL-1.1.txt  THIRD_PARTY_LICENSES_ADMIN.txt  THIRD_PARTY_LICENSES_CLIENT.txt
app/client/: .gitignore  .hintrc  .prettierignore  .prettierrc  .stylelintignore  eslint.config.js  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  prettier.config.js  qwik.env.d.ts  stylelint.config.js  stylelint.config.mjs  third-party-licenses.txt  tsconfig.json  vite.config.ts
app/server/: .gitignore  Cargo.toml
app/server/src/: config.rs  error.rs  lib.rs  main.rs  response.rs  seed.rs  state.rs
app/server/src/db/: mod.rs  pool.rs
app/server/src/middlewares/: cors.rs
app/server/src/modules/: mod.rs
app/server/src/modules/comment/: dto.rs  handler.rs  location.rs  mod.rs  model.rs  repo.rs  route.rs  service.rs
app/server/src/modules/post/: dto.rs  handler.rs  mod.rs  model.rs  repo.rs  route.rs  service.rs
app/server/src/modules/project/: dto.rs  handler.rs  model.rs  repo.rs  service.rs
app/server/src/modules/stats/: dto.rs  handler.rs  mod.rs  repo.rs  route.rs  service.rs
app/server/src/routes/: health.rs  mod.rs
app/server/src/utils/: mod.rs  pagination.rs  time.rs
config/: SilvaConfig.example.yaml  server.example.toml
configs/: SilvaConfig.example.yaml
sql/: creat_datebase.sql  creat_schema.sql  reset_schema.sql
(+212 files in other folders)
