[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
actix-rt = "2"
